crates/solidity/testing/snapshots/bindings_output/using/global/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[ counter.sol:7:1 ]
   │
 7 │ ╭─▶ using {increment} for Counter global;
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ counter.sol:1:1 ]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── name: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── name: 2
   │ 
 5 │ function increment(Counter memory _counter) public {}
   │          ────┬──── ───┬───        ────┬───  
   │              ╰────────────────────────────── name: 3
   │                       │               │     
   │                       ╰───────────────────── ref: 1
   │                                       │     
   │                                       ╰───── name: 4
───╯
[39mDefiniens:[0m 
   ╭─[ counter.sol:1:1 ]
   │
 1 │ ╭─▶ struct Counter {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ counter.sol:1:1 ]
   │
 2 │         uint value;
   │     ────────┬───────  
   │             ╰───────── definiens: 2
   │ 
 4 │ ╭─▶ 
 5 │ ├─▶ function increment(Counter memory _counter) public {}
   │ │                      ───────────┬───────────              
   │ │                                 ╰───────────────────────── definiens: 4
   │ │                                                           
   │ ╰─────────────────────────────────────────────────────────── definiens: 3
───╯
[39mReferences and definitions:[0m 
   ╭─[ main.sol:1:1 ]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── name: 5
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 6
 4 │     function test(Counter memory c) public {
   │              ──┬─                ┬  
   │                ╰──────────────────── name: 7
   │                                  │  
   │                                  ╰── name: 8
   │
   ├─[ main.sol:1:1 ]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── ref: 1
   │ 
 4 │     function test(Counter memory c) public {
   │                   ───┬───  
   │                      ╰───── refs: 5, 1
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 8
   │               │      
   │               ╰────── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ main.sol:1:1 ]
   │
 1 │ │   import {Counter} from "counter.sol";
   │ │           ───┬───  
   │ │              ╰───── definiens: 5
 2 │ ╭─▶ 
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 6
   │
   ├─[ main.sol:1:1 ]
   │
 4 │ ╭─▶     function test(Counter memory c) public {
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── definiens: 7
   │
   ├─[ main.sol:1:1 ]
   │
 4 │     function test(Counter memory c) public {
   │                   ────────┬───────  
   │                           ╰───────── definiens: 8
───╯
